<resources>
    <string name="app_name">CrudLibrary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lblTitulo">Titulo</string>
    <string name="lblAutor">Autor</string>
    <string name="lblgenero">Genero</string>
    <string name="lblIsbn">Isbn</string>
    <string name="lblDisponible">Disponibles</string>
    <string name="lblOcupados">Ocupados</string>
    <string name="lblPortada">Lista de Libros</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="volver">Volver</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
</resources>