<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guardarLibroFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:scaleType="centerCrop"
        android:alpha="0.9" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/lblPortada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Registrar Libro"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="35dp"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/lblTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblTitulo"
                android:textColor="#FFFFFF"
                android:textSize="21dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblAutor"
                android:textColor="#FFFFFF"
                android:textSize="21dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblgenero"
                android:textColor="#FFFFFF"
                android:textSize="21dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblIsbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblIsbn"
                android:textColor="#FFFFFF"
                android:textSize="21dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtIsbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblDisponible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblDisponible"
                android:textColor="#FFFFFF"
                android:textSize="21dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtDisponibles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblOcupados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblOcupados"
                android:textColor="#FFFFFF"
                android:textSize="21dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtOcupados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="#8b4513"
                    android:text="Guardar"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/btnListaLibro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#8b4513"
                    android:text="Lista Libro"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>
</FrameLayout>
